Adds a fancy blur to the background

--- a/src/assets/css/_modal.scss
+++ b/src/assets/css/_modal.scss
@@ -21,6 +21,7 @@
 .overlay {
   z-index: 124900;
   background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(0.125rem);
 }
 
 .modal_container[data-active="false"] {
