Adds the Date of Prep component

--- a/src/components/common/footer.hbs
+++ b/src/components/common/footer.hbs
@@ -4,4 +4,5 @@
     <button data-modal-open data-modal="1">References</button>
     <button data-nav data-direction="next">{{copy.nav.next}}</button>
   </nav>
+  {{ fileInclude 'src/components/common/dop.hbs' }}
 </footer>
