Adds localised tracking

--- a/src/components/common/references.hbs
+++ b/src/components/common/references.hbs
@@ -1,7 +1,7 @@
-<div data-modal id="modal-1" data-active="false" class='modal_container'>
-  <button data-modal-close data-modal="1" class="overlay"></button>
+<div data-modal id="modal-References" data-active="false" class='modal_container'>
+  <button data-modal-close data-modal="References" class="overlay"></button>
   <div class="modal">
-    <button data-modal-close data-modal="1">Close</button>
+    <button data-modal-close data-modal="References">Close</button>
     <div class="card">
       <h1>
         References
